--- a/kNN.ipynb
+++ b/kNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUSW5q+4wZzJara2lqzsLg"
+      "authorship_tag": "ABX9TyP6ilZw3Q3x7pQStcnFxxrn"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +16,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Section 1 of my self-made artificial intelligence course: Creating a K-Nearest Neighbors algorithm to classify the Iris dataset. (https://www.kaggle.com/datasets/uciml/iris). I wanted to try to build by scratch and then compare to the SciKit Learn algorithm and compare the results. Used matplotlib for visualization."
+      ],
+      "metadata": {
+        "id": "KK9F0wame9pb"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "hpdzZDoHrJcZ"
       },
@@ -33,9 +42,6 @@
         "import matplotlib.pyplot as plt"
       ]
     },
-    {
-      "cell_type": "text",
-      "source": [ "Section 1 of my self-made machine learning course: Creating a K-Nearest Neighbors algorithm to classify the Iris dataset. (https://www.kaggle.com/datasets/uciml/iris). I wanted to try to build by scratch and then compare to the SciKit Learn algorithm and compare the results. Used matplotlib for visualization."
     {
       "cell_type": "code",
       "source": [
@@ -99,7 +105,7 @@
       "metadata": {
         "id": "uGiRwHfPTlMk"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +209,7 @@
         },
         "outputId": "e8a0131f-8b78-41cc-95dc-3f9df60a3acc"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
